@startuml 07-数据模型
' covhub 2.1 —— 数据库表与磁盘目录的对应关系
' 对应代码：covhub/db/models.py（Alembic 迁移 0001 / 0002）、covhub/layout.py
' 原则：数据库只存元数据（配置、每次快照的统计、归档记录），文件都在 dataDir 磁盘上，
'       行号级明细不进库；「磁盘先、DB 后、每个 repo 调用一个短事务」。

title 数据模型 · 数据库（元数据）与 dataDir（文件）

skinparam shadowing false
skinparam NoteFontSize 11
skinparam linetype ortho
skinparam class {
  BackgroundColor #F4F6F5
  BorderColor #8A9A98
  FontSize 12
}
hide circle
hide empty methods

package "数据库（MySQL 8 / SQLite / PostgreSQL）" {
  class projects {
    id
    name  UNIQUE（允许中文）
    title / description
    created_at / updated_at
  }
  class services {
    id
    name  UNIQUE
    channel  pull | push
    version
    address / port / bind_address
    includes / excludes / report_excludes  JSON
    classfiles / sourcefiles  JSON
    class_dump_dir / source_encoding / dump_retry
    project_id  FK → projects（SET NULL）
  }
  class service_state {
    service_id  PK/FK（1:1）
    session_start  会话基线（断代检测）
    push_mixed  混版本标记
    online / online_at  采集线程每轮写
  }
  class snapshots {
    id
    service_id  FK
    at / kind  watch | dump | predeploy | seal | report
    version
    instruction / branch  %
    covered / total  指令
    classes_hit / classes_total
    reason / session_start / match_rate
    inc_covered / inc_total / inc_pct  新增代码
  }
  class archives {
    id
    service_id / snapshot_id  FK
    version
    archive_dir  "versions/<目录>"（可能退让成 -2）
    sealed_at / sealed_by  predeploy | restart-detected
    fingerprint / exec_count
    match_rate / health_verdict
    merged
  }
  class breaks {
    id
    service_id  FK
    at / kind  restart | mixed-versions
    from_session / to_session
    sealed_as / archive_id
    instances
  }
  class unit_reports {
    id
    service_id  FK
    version  UNIQUE(service, version)
    at
    instruction / branch / line  %
    covered / total / lines_* / classes_*
    inc_covered / inc_total / inc_pct
    xml_path  "unit/<v>/jacoco.xml"
  }
  class diffs {
    id
    service_id  FK
    version  UNIQUE(service, version)
    base / head  git ref
    at
    files / added_lines / unmatched
  }
}

projects "1" o-- "0..*" services
services "1" -- "1" service_state
services "1" *-- "0..*" snapshots
services "1" *-- "0..*" archives
services "1" *-- "0..*" breaks
services "1" *-- "0..*" unit_reports
services "1" *-- "0..*" diffs
archives "1" -- "1" snapshots : 结算那一刻的快照
breaks "0..1" ..> archives : sealed_as 对应的归档

package "dataDir/<service>/（磁盘）" {
  class "current/" as cur {
    html/  jacoco.xml  jacoco.csv
    incremental.json  本周期新增代码明细
  }
  class "exec/" as ex {
    <时间戳>.exec  本周期历次快照
    <时间戳>-pushN.exec  push 各副本
  }
  class "versions/<目录>/" as ver {
    html/  jacoco.xml  jacoco.csv
    incremental.json（含源码片段）
    exec/  merged.exec
    manifest.json  归档元数据的真实来源
  }
  class "artifacts/<版本>/" as art {
    upload-classes 传上来的 class 产物
  }
  class "classes/" as cls {
    按 reportExcludes 过滤后的 class 副本
  }
  class "unit/<版本>/" as unit {
    jacoco.xml  incremental.json
  }
  class "diff/" as diff {
    <版本>.diff  原文
    <版本>.lines.json  {路径: [新增行号]}
  }
}

snapshots ..> cur : 每次采集重写
archives ..> ver : archive_dir
unit_reports ..> unit : xml_path
diffs ..> diff : 行号明细只在磁盘
services ..> art : classfiles 指向

note bottom of ver
  归档目录不可覆盖；exec 是不可再生的
  真实执行轨迹。`covhub import` 能从
  manifest.json 把 archives 表重建出来。
end note

note bottom of snapshots
  看板趋势、报表、历史对比的数字来源。
  inc_* 为 NULL 表示没有该版本的 diff，
  前端显示「—」，不回填历史。
end note

@enduml
